Fix Table Scroll
Issue: Ballot table was not overflowing correctly.
Change: Make table height absolute.

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -28,8 +28,8 @@
 }
 
 #modal-table {
-    height: 100%;
-    overflow: auto;
+    height: 300px;
+    overflow-y: auto;
 }
 
 .modal-dialog,
